2011-05-03  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc (CosetTable): Catch bad_alloc exception if
	threshold is too big.
	(define): Change return type to boolean; catch bad_alloc exception
	if can't make a new definition.
	(scan_and_fill, hlt, felsch): Change return type to boolean;
	return false if can't make a new definition.
	* cosettable.h: Declare new return types.
	(threshold_is_bad): New public function.
	* tc.cc: Adapt to changes above.
	* tcf.cc: Ditto.
	* tc+.cc: Ditto.
	* TODO: Update.
	* examples/F27.in: New file.
	* examples/F27+.in: Ditto.
	* examples/G8723.in: Ditto.
	* examples/G8723+.in: Ditto.

2011-05-03  Ken Brown  <kbrown@cornell.edu>

	* cosettable.cc (hlt_plus): Fix bug in which processing cosets
	resumed at the wrong place after lookahead.
	(lookahead): Add parameter 'start'.
	(compress): Add parameter 'current'; make function return 'int'.
	* cosettable.h: Adapt declarations to changes above.
	* examples/HNO_1.in: New file.
	* examples/HNO_1+.in: Ditto.
	* examples/HNO_8.in: Ditto.
	* examples/HNO_8+.in: Ditto.
	* examples/SL2_13.in: Ditto.
	* examples/SL2_13+.in: Ditto.

2011-05-02  Ken Brown  <kbrown@cornell.edu>

	* cosettable.h (CosetTable): Declare new member 'threshold'.
	* cosettable.cc (CosetTable): Change constructor accordingly;
	reserve space in cosettable.
	* tc+.cc: Adapt to changed constructor.
	* tcf.cc: Ditto.

2011-04-30  Ken Brown  <kbrown@cornell.edu>

	* Makefile.cygwin: Add 'clean' target.
	* Makefile.linux: Ditto.
	* TODO: Update.
	* cosettable.h: Change constructor parameters to vectors of
	strings instead of words.
	* cossettable.cc: Change constructor accordingly.  Move string
	manipulations for Felsch to here from tcf.cc.  For Felsch, add
	[original] relators to generators of H.
	* tcf.cc:  Move 'rotate' from here to gens_and_words.
	(getgroup): Remove string manipulations.
	* gens_and_words.cc: Move 'rotate' here.
	* gens_and_words.h: Declare it.
	* tc.cc: Accommodate changed CosetTable constructor.