@@ -14,8 +14,6 @@ See the end of the file for license conditions.
 
 * Improve commenting both in headers and code.
 
-* Add README to examples.
-
 
 This file is part of Toddcox.
 
