@@ -1,0 +1,102 @@
+Copyright 2011 Kenneth S. Brown.
+See the end of the file for license conditions.
+
+The files in this directory can be used as input files for the
+programs 'tc', 'tc+', and 'tcf'.  Those with '+' in their names are
+for 'tc+'.  Assuming, for example, that the executables are in the
+parent directory, one could give the command
+
+  ../tc+ < F27+.in
+
+* F27.in and F27+.in
+
+G is the Fibonacci group F(2,7), with 7 generators a,b,...,g and 7
+relations c = ab, d = bc,..., b = ga.  It is cyclic of order 29.  The
+given input files do coset enumeration over the cyclic subgroup H
+generated by c.  The result is that H has index 1, so G is cyclic.  In
+particular, this shows that G is abelian, and elementary methods now
+show that G is of order 29.  Alternatively, one could modify the input
+files to do coset enumeration over the trivial subgroup and directly
+see that G is of order 29.
+
+* G8723.in and G8723+.in
+
+G is the group (8,7;2,3) with two generators a,b and 4 relations
+
+  a^8 = b^7 = (ab)^2 = (Ab)^3 = 1,
+
+where A = a^-1.  H is the subgroup generated by a^2 and Ab.  It has
+index 448.  This example is taken from the paper
+
+  Cannon, John J.; Dimino, Lucien A.; Havas, George; Watson, Jane M.
+  Implementation and analysis of the Todd-Coxeter algorithm.
+  Math. Comp. 27 (1973), 463–490.
+
+* M12.in and M12+.in
+
+G is the Mathieu group M_{12}, which is a simple group of order 95040,
+and H is the trivial subgroup.  G is presented with 3 generators a,b,c
+and 7 relations
+
+a^{11} = b^2 = c^2 = (ab)^3 = (ac)^3 = (bc)^{10} = a^2(bc)^2a(bc)^{-2} = 1.
+
+This presentation is taken from p. 169 of the book
+
+  Holt, Derek F.; Eick, Bettina; O'Brien, Eamonn A.  Handbook of
+  computational group theory.  Discrete Mathematics and its
+  Applications (Boca Raton). Chapman & Hall/CRC, Boca Raton, FL,
+  2005.
+
+The authors describe it as an example of a straightforward coset
+enumeration.  The next three examples are taken from the same book
+(with attributions to other sources) and are described as difficult
+enumerations relative to the order of the group.  In all three cases H
+is again the trivial subgroup.
+
+* SL2_13.in and SL2_13+.in
+
+G is the group SL_2(13), presented with two generators a,b and two
+relations
+
+  a^2 = (ab)^3,  (ab^4ab^7)^2b^7a^8 = 1.
+
+It has order 2184 = 12 x 13 x 14.  Enumeration by the HLT method
+('tc') uses almost 30 million cosets.  Using lookahead ('tc+'), one
+can cut the size of the coset table down to about 1.5 million, but not
+much smaller.  The Felsch method ('tcf') uses about 2.6 million
+cosets.
+
+* HNO_1.in and HNO_1+.in
+
+This is a 3-generator, 3-relator group of order 6561 = 3^8.  HLT uses
+about 200,000 cosets; this can be reduced to about 30,000 with
+lookahead.  Felsch uses about 35,000 cosets.
+
+* HNO_8.in and HNO_8+.in
+
+This is the same group of order 6561, with a different 3-generator,
+3-relator presentation.  I was not able to get any of the three
+enumeration methods to complete on my computer before running out of
+memory.
+
+
+This file is part of Toddcox.
+
+Toddcox is free software: you can redistribute it and/or modify it
+under the terms of the GNU General Public License as published by the
+Free Software Foundation, either version 3 of the License, or (at your
+option) any later version (GPLv3+).
+
+Toddcox is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+for more details.
+
+You should have received a copy of the GNU General Public License
+along with Toddcox.  If not, see <http://www.gnu.org/licenses/>.
+
+
+Local variables:
+mode: outline
+paragraph-separate: "[ 	]*$"
+end:
